--- a/China_Index.Rmd
+++ b/China_Index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "China_Index"
 author: "Ben P-S- Lee"
-date: "12/23/2021"
+date: "04/15/2022"
 output: github_document:
   code_folding: hide
   toc_float: TRUE
@@ -11,22 +11,20 @@ output: github_document:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+```{r packages}
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+library(tidyverse)
+library(knitr)
+library(magrittr)
+library(readxl)
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
 ```
 
-## Including Plots
+```{r data import}
 
-You can also embed plots, for example:
+china_index <- read_excel("china_index_answer_2022-04-07.xlsx", 
+    col_types = c("numeric", "numeric", "text", 
+        "text", "numeric", "numeric", "text", 
+        "skip", "numeric", "text"))
 
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
