--- a/China_Index.Rmd
+++ b/China_Index.Rmd
@@ -44,7 +44,7 @@ gdp_pop <- wb_data(indicator = c("SP.POP.TOTL","NY.GDP.PCAP.CD"), start_date = 2
 ```{r data manipulation}
 china_index_country <- china_index %>%
   group_by(country, `Focus Region`) %>%
-  summarise(score_nor = (sum(score, na.rm = TRUE)/sum(total_score, na.rm = TRUE)), total_score = sum(score, na.rm = TRUE)) %>%
+  summarise(score_nor = (sum(score_v1, na.rm = TRUE)/sum(total_score, na.rm = TRUE)), total_score = sum(score_v1, na.rm = TRUE)) %>%
   arrange(desc(score_nor)) %>%
   left_join(gdp_pop, by = "country") %>%
   select(-iso2c, -iso3c, -date) %>%
@@ -66,8 +66,9 @@ china_index_country["Venezuela", "pop"] <- 28435940 #UNdata 2020
 china_index_domain <- china_index %>%
   group_by(country, `Focus Region`, domain_x) %>%
   rename(region = `Focus Region` ) %>%
-  summarise(score_domain = (sum(score, na.rm = TRUE)/sum(total_score, na.rm = TRUE))) %>%
-  left_join(gdp_pop, by = "country")
+  summarise(score_domain = (sum(score_v1, na.rm = TRUE)/sum(total_score, na.rm = TRUE))) %>%
+  left_join(gdp_pop, by = "country") %>%
+  arrange(region, domain_x, desc(score_domain))
 
 ```
 
@@ -75,15 +76,15 @@ china_index_domain <- china_index %>%
 
 china_index_domain %>%
   filter(domain_x == c("Academia", "Domestic Politics", "Economy")) %>%
-  ggplot(aes(x = domain_x, y = score_domain)) + geom_boxplot(aes(color = region))
+  ggplot(aes(x = domain_x, y = score_domain)) + geom_boxplot(aes(color = region), width =0.5) + coord_flip()
 
 china_index_domain %>%
   filter(domain_x == c("Foreign Policy", "Law Enforcement", "Media")) %>%
-  ggplot(aes(x = domain_x, y = score_domain)) + geom_boxplot(aes(color = region))
+  ggplot(aes(x = domain_x, y = score_domain)) + geom_boxplot(aes(color = region), width = 0.5) + coord_flip()
 
 china_index_domain %>%
   filter(domain_x == c("Military", "Society", "Technology")) %>%
-  ggplot(aes(x = domain_x, y = score_domain)) + geom_boxplot(aes(color = region))
+  ggplot(aes(x = domain_x, y = score_domain)) + geom_boxplot(aes(color = region), width = 0.5) + coord_flip()
 
 china_index_country %>%
   ggplot(aes(x = gdp, y = score_nor)) + geom_jitter()
