--- a/China_Index.Rmd
+++ b/China_Index.Rmd
@@ -79,19 +79,23 @@ china_index_domain %>%
   ggplot(aes(x = domain_x, y = score_domain)) + 
   geom_boxplot(aes(color = region), width = 0.5) + 
   coord_flip() + ylim(0,1.1) + 
-  theme(legend.position = c(0.85,0.5), legend.key.size = unit(0.05, "cm"))
+  theme(legend.position = c(0.85,0.5), legend.key.size = unit(0.05, "cm")) +
+  labs(title = "Scores across Domain by Region", x = "", y = "")
+  
 
 china_index_domain %>%
   filter(domain_x == c("Foreign Policy", "Law Enforcement", "Media")) %>%
   ggplot(aes(x = domain_x, y = score_domain)) + geom_boxplot(aes(color = region), width = 0.5) + 
   coord_flip() + ylim(0,1.1) +
-  theme(legend.position = c(0.85,0.3), legend.key.size = unit(0.05, "cm"))
+  theme(legend.position = c(0.85,0.3), legend.key.size = unit(0.05, "cm")) +
+  labs(title = "Scores across Domain by Region", x = "", y = "")
 
 china_index_domain %>%
   filter(domain_x == c("Military", "Society", "Technology")) %>%
   ggplot(aes(x = domain_x, y = score_domain)) + geom_boxplot(aes(color = region), width = 0.5) + 
   coord_flip() + ylim(0,1.1) +
-   theme(legend.position = c(0.85,0.5), legend.key.size = unit(0.05, "cm"))
+  theme(legend.position = c(0.85,0.5), legend.key.size = unit(0.05, "cm")) +
+  labs(title = "Scores across Domain by Region", x = "", y = "")
 
 china_index_country %>%
   ggplot(aes(x = gdp, y = score_nor)) + geom_jitter()
